--- a/packages/renderer/index.html
+++ b/packages/renderer/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8" />
     <meta
       http-equiv="Content-Security-Policy"
-      content="script-src 'self' 'unsafe-eval' default-src 'self' blob:"
+      content="script-src-elem script-src 'self' 'unsafe-eval' default-src 'self' blob:"
     />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
+    <script src="https://cdn.tailwindcss.com"></script>
     <title>Vite App</title>
   </head>
   <body>
